--- a/app/views/prints/_form.html.erb
+++ b/app/views/prints/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_field :description, id: :print_description %>
+    <%= form.text_area :description, id: :print_description %>
   </div>
 
   <div class="field">
